--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 <body>
   <div class="wizard">
     <header><img src="logo.png" alt="Show Today"></header>
+    <!-- Шаг 1 -->
     <div class="step active" data-step="1">
       <h2>1. Выберите формат</h2>
       <label><input type="radio" name="mode" value="studio"> В студии</label>
@@ -37,28 +38,31 @@
         <button class="btn-next" disabled>Далее →</button>
       </div>
     </div>
+    <!-- Шаг 2 -->
     <div class="step" data-step="2">
       <h2>2. Дата и время</h2>
       <label>Дата: <input id="date-picker" readonly placeholder="– выберите дату –"></label>
-      <label>Время: <select id="time-select"><option value="">– выберите время –</option></select></label>
+      <label>Время: <select id="time-select"><option value="">– выберите –</option></select></label>
       <div class="buttons">
         <button class="btn-prev">← Назад</button>
         <button class="btn-next" disabled>Далее →</button>
       </div>
     </div>
+    <!-- Шаг 3 -->
     <div class="step" data-step="3">
       <h2>3. Подробности</h2>
       <label>Количество: <input type="text" id="count" inputmode="numeric" pattern="\d*" placeholder="1"></label>
       <label id="address-container" style="display:none;">Адрес: <input type="text" id="address"></label>
-      <label>Программа: <select id="program"><option value="">– выберите –</option><option value="classic">Классика</option><option value="musicality">Музыкалити</option><option value="battle">Battle Show</option><option value="lotto">Лото</option><option value="kids">Детский</option><option value="quiz">Квиз-мафия</option><option value="21plus">21+</option></select></label>
+      <label>Программа: <select id="program"><option value="">– выберите –</option><option value="classic">Классика</option><option value="musicality">Музыкалити</option><option value="battle">Battle</option><option value="lotto">Лото</option><option value="kids">Детский</option><option value="quiz">Квиз</option><option value="21plus">21+</option></select></label>
       <label>Возраст: <select id="age"><option value="">– выберите –</option><option>7-12</option><option>13-17</option><option>18-30</option><option>31-45</option><option>45+</option></select></label>
       <label>Визиты: <select id="visits"><option value="">– выберите –</option><option>1</option><option>2</option><option>3</option><option>4</option><option>5+</option></select></label>
-      <label>Повод: <select id="occasion"><option value="">– выберите –</option><option>день рождения</option><option>корпоратив</option><option>мальчишник</option><option>девичник</option><option>встреча с друзьями</option><option>выпускной</option><option>поездка на природу</option><option>свадьба</option><option>иное</option></select></label>
+      <label>Повод: <select id="occasion"><option value="">– выберите –</option><option>день рождения</option><option>корпоратив</option><option>мальчишник</option><option>девичник</option><option>друзья</option><option>выпускной</option><option>природа</option><option>свадьба</option><option>иное</option></select></label>
       <div class="buttons">
         <button class="btn-prev">← Назад</button>
         <button class="btn-next" disabled>Далее →</button>
       </div>
     </div>
+    <!-- Шаг 4 -->
     <div class="step" data-step="4">
       <h2>4. Доп. услуги & пожелания</h2>
       <div id="extras-container">
@@ -77,29 +81,30 @@
 
   <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
   <script>
-    // Инициализация
-    const tg = (window.Telegram && Telegram.WebApp) ? Telegram.WebApp : null;
-    if(tg) tg.ready();
+    // Безопасная проверка наличия Telegram.WebApp
+    const tg = (typeof window.Telegram === 'object' && window.Telegram.WebApp) ? window.Telegram.WebApp : null;
+    if (tg) tg.ready();
 
+    // Элементы и шаги
     const steps = Array.from(document.querySelectorAll('.step'));
-    const btnNext = document.querySelectorAll('.btn-next');
-    const btnPrev = document.querySelectorAll('.btn-prev');
-    const datePicker = document.getElementById('date-picker');
-    const timeSelect = document.getElementById('time-select');
-    const count = document.getElementById('count');
-    const addressContainer = document.getElementById('address-container');
-    const address = document.getElementById('address');
-    const program = document.getElementById('program');
-    const age = document.getElementById('age');
-    const visits = document.getElementById('visits');
-    const occasion = document.getElementById('occasion');
+    const btnNext = steps.map(s => s.querySelector('.btn-next'));
+    const btnPrev = steps.map(s => s.querySelector('.btn-prev'));
+    const datePicker  = document.getElementById('date-picker');
+    const timeSelect  = document.getElementById('time-select');
+    const countInput  = document.getElementById('count');
+    const addressCont = document.getElementById('address-container');
+    const addressInput= document.getElementById('address');
+    const programSel  = document.getElementById('program');
+    const ageSel      = document.getElementById('age');
+    const visitsSel   = document.getElementById('visits');
+    const occasionSel = document.getElementById('occasion');
 
-    // Настройка flatpickr и времени
+    // Настройка Date & Time picker
     flatpickr(datePicker, { dateFormat:'d.m.Y', minDate:'today', onChange:()=>validateStep(1) });
-    for(let h=9; h<=22; h++){
+    for (let h=9; h<=22; h++) {
       ['00','30'].forEach(m=>{
-        if(h===22 && m==='30') return;
-        const opt = document.createElement('option');
+        if (h===22 && m==='30') return;
+        let opt = document.createElement('option');
         opt.value = `${h.toString().padStart(2,'0')}:${m}`;
         opt.textContent = opt.value;
         timeSelect.append(opt);
@@ -107,55 +112,67 @@
     }
 
     let current = 0;
-    function validateStep(i){
+    function validateStep(i) {
       let ok = false;
-      if(i===0) ok = !!document.querySelector('input[name="mode"]:checked');
-      else if(i===1) ok = !!datePicker.value && !!timeSelect.value;
-      else if(i===2) ok = Number(count.value)>0 && !!program.value && !!age.value && !!visits.value && !!occasion.value &&
-                       (addressContainer.style.display==='none' || address.value.trim()!=='');
-      else if(i===3) ok = true;
-      steps[i].querySelector('.btn-next').disabled = !ok;
+      if (i===0) ok = !!document.querySelector('input[name="mode"]:checked');
+      else if (i===1) ok = !!datePicker.value && !!timeSelect.value;
+      else if (i===2) ok = Number(countInput.value)>0 && !!programSel.value && !!ageSel.value && !!visitsSel.value && !!occasionSel.value &&
+                         (addressCont.style.display==='none' || addressInput.value.trim()!=='');
+      else if (i===3) ok = true;
+      btnNext[i].disabled = !ok;
     }
-
-    // Обработчики изменения полей
-    document.querySelectorAll('input[name="mode"]').forEach(r=>r.addEventListener('change',()=>validateStep(0)));
-    datePicker.addEventListener('change',()=>validateStep(1)); timeSelect.addEventListener('change',()=>validateStep(1));
-    count.addEventListener('input',()=>validateStep(2)); program.addEventListener('change',()=>validateStep(2));
-    age.addEventListener('change',()=>validateStep(2)); visits.addEventListener('change',()=>validateStep(2));
-    occasion.addEventListener('change',()=>validateStep(2));
 
     // Навигация
-    function showStep(i){
-      steps.forEach((s, idx)=>s.classList.toggle('active', idx===i));
+    function showStep(i) {
+      steps.forEach((s,idx)=>s.classList.toggle('active',idx===i));
       current = i; validateStep(i);
-      // Адрес для выезда
-      const mode = document.querySelector('input[name="mode"]:checked')?.value;
-      addressContainer.style.display = (mode==='outdoor') ? 'block' : 'none';
+      // адрес для выезда
+      let mode = document.querySelector('input[name="mode"]:checked')?.value;
+      addressCont.style.display = (mode==='outdoor') ? 'flex' : 'none';
     }
-    btnNext.forEach((b, idx)=> b.addEventListener('click', ()=> idx<steps.length-1 ? showStep(idx+1) : finish() ));
-    btnPrev.forEach((b, idx)=> b.addEventListener('click', ()=> idx>0 && showStep(idx-1) ));
+    btnNext.forEach((btn, idx)=> btn.addEventListener('click', ()=> idx<steps.length-1 ? showStep(idx+1) : finish()));
+    btnPrev.forEach((btn, idx)=> btn.addEventListener('click', ()=> idx>0 && showStep(idx-1)));
 
-    showStep(0);
+    // Триггеры валидации
+    document.querySelectorAll('input[name="mode"]').forEach(r=> r.addEventListener('change', ()=> validateStep(0)));
+    datePicker.addEventListener('change', ()=> validateStep(1)); timeSelect.addEventListener('change', ()=> validateStep(1));
+    countInput.addEventListener('input', ()=> validateStep(2)); programSel.addEventListener('change', ()=> validateStep(2));
+    ageSel.addEventListener('change', ()=> validateStep(2)); visitsSel.addEventListener('change', ()=> validateStep(2));
+    occasionSel.addEventListener('change', ()=> validateStep(2));
+    validateStep(0);
 
-    // MainButton
-    if(tg){ tg.MainButton.setText('Записаться'); tg.MainButton.show(); tg.MainButton.onClick(finish); }
+    // MainButton в WebApp
+    if (tg) {
+      tg.MainButton.setText('Записаться');
+      tg.MainButton.show();
+      tg.MainButton.onClick(finish);
+    }
 
-    // Функция отправки
-    function finish(){
-      // Всегда показываем alert, чтобы подтвердить вызов
+    // Отправка данных и закрытие
+    function finish() {
       const extras = Array.from(document.querySelectorAll('input[name="extras"]:checked')).map(i=>i.value);
-      const data = {
-        action:'booking', payload:{
+      const payload = {
+        action: 'booking',
+        payload: {
           mode: document.querySelector('input[name="mode"]:checked').value,
-          date: datePicker.value, time: timeSelect.value,
-          count: count.value, address: address.value||'', program: program.value,
-          age: age.value, visits: visits.value, occasion: occasion.value,
-          extras: extras, wishes: document.getElementById('wishes').value.trim()
+          date: datePicker.value,
+          time: timeSelect.value,
+          count: countInput.value,
+          address: addressInput.value || '',
+          program: programSel.value,
+          age:     ageSel.value,
+          visits:  visitsSel.value,
+          occasion: occasionSel.value,
+          extras:  extras,
+          wishes:  document.getElementById('wishes').value.trim()
         }
       };
-      alert('DEBUG: finish() вызвана!\n'+JSON.stringify(data, null, 2));
-      if(tg){ tg.sendData(JSON.stringify(data)); tg.close(); }
-      else console.log('Mock sendData', data);
+      // всегда проверка
+      alert('DEBUG: отправка данных!\n'+JSON.stringify(payload, null, 2));
+      if (tg) {
+        tg.sendData(JSON.stringify(payload));
+        tg.close();
+      } else console.log('Mock sendData', payload);
     }
   </script>
 </body>
