--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       alert('DEBUG: отправка данных!\n'+JSON.stringify(payload, null, 2));
       if (tg) {
         tg.sendData(JSON.stringify(payload));
-        tg.close();
+        setTimeout(() => tg.close(), 100);
       } else console.log('Mock sendData', payload);
     }
   </script>
